# mdread

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  test-sample.md  vite.config.ts  vitest.config.ts  wdio.conf.cjs
.github/workflows/: quality.yml  release.yml
docs/: IMPLEMENTATION-ROADMAP.md
e2e/: reader.e2e.cjs  wdio-capability.json
e2e/fixtures/: reader-sample.md  快速切换-A.md  快速切换-B.markdown
e2e/fixtures/__pycache__ 与 _legacy 等超长嵌套目录名称必须显示为省略号而不能横向超出面板/深层目录/: 多账号ECS巡检指导手册以及阿里云海外资源命名规范说明文档.md
scripts/: build-e2e.cjs  check-version.cjs  generate-checksums.cjs  generate-sbom.cjs
src/: content-transform.test.ts  content-transform.ts  dragdrop.ts  export-service.ts  filetree.ts  history.ts  main.ts  markdown-worker.ts  outline.ts  path-display.test.ts  path-display.ts  recent.test.ts  recent.ts  renderer.ts  search.ts  shortcuts.ts  storage.test.ts  storage.ts  system-open.test.ts  system-open.ts  test-setup.ts  theme.ts  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/styles/: highlight.css  main.css  markdown.css  outline.css  print.css  sidebar.css  themes.css
